Fix misalignment in navbar groups

--- a/components/Navigation.module.scss
+++ b/components/Navigation.module.scss
@@ -48,7 +48,7 @@
 }
 
 .subrouteExpand {
-  padding-left: 15px;
+  padding-left: 5px;
 }
 
 .subrouteExpandIcon {
